<resources>
    <string name="app_name">GroupChat</string>
    <string name="logout_title">Log out</string>
    <string name="menu_create_password">Create password</string>
    <string name="create_btn">CREATE</string>

    <string name="hint_username">Your (nick)name</string>
    <string name="hint_password">password</string>
    <string name="hint_another_username">Try another username</string>
    <string name="loading">Please wait, loading data</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_next">that\'s me</string>
    <string name="or">or</string>
    <string name="not_you">not you?</string>
    <string name="heading_login_2">We know that guy</string>
    <string name="heading_login_1">Introduce yourself</string>
    <string name="message_password_not_set">But he didn\'t set his password. If it is you, get back to the device you\'re logged in and set the password.</string>
    <string name="heading_login_3">Create your password</string>
    <string name="error_wrong_password">Wrong password. Try again.</string>
    <string name="header_chats">Chats</string>
    <string name="anonymous">Anonimous</string>
    <string name="header_profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="private_chat">Private chat</string>
    <string name="warning_logout">You will loose your account</string>
    <string name="warning_logout_message">You haven\'t set your password, you\'ll not be able to login back. Set password now?</string>
    <string name="warning_logout_set">Set password</string>
    <string name="warning_logout_kill">Hate this account</string>

</resources>
